# Fxp

./: .gitignore  pyproject.toml  setup.sh
examples/: test.py  test_v2.py
fxp/: __init__.py  core.py  debug.py  tools.py
