[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fxp"
version = "0.2.0"
description = "Librería de ejemplo FXP"

authors = [
    { name = "Ing.Ferreyra", email = "fernandoferreyra11@gmail.com" }
]

readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.26,<2.0",
    "pandas>=2.2,<3.0",
    "colorama==0.4.6",
    "pytest==9.1.1"
]

[tool.setuptools]
packages = ["fxp"]